# llm-provider-audit

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  RELEASING.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
configs/audits/: deep-aicodemirror.yaml  deep-askmanyai.yaml  deep-wyzai.yaml  gpt-5.4-router-baseline.yaml  openai-compatible-deep-template.yaml  openai-compatible-template.yaml  smoke-aicodemirror.yaml  smoke-askmanyai.yaml  smoke-wyzai.yaml
configs/prompt-suites/: default.yaml
configs/prompt-suites/differential/: deep-v1.yaml
docs/: codex-open-source-plan.md  github-launch.md
docs/releases/: v0.1.0.md
examples/: README.md
examples/fixtures/: likely-match-run.json  suspicious-mismatch-run.json
examples/reports/: likely-match.md  suspicious-mismatch.md
src/model_checker/: cli.py  config.py  domain.py  orchestration.py
src/model_checker/analysis/: __init__.py  behavioral.py  calibration.py  fingerprinting.py  metadata.py  reference_anchor_calibration.py  statistics.py  verdict.py
src/model_checker/prompts/: __init__.py  catalog.py
src/model_checker/providers/: __init__.py  base.py  openai_compatible.py  router_instance.py
src/model_checker/reporting/: __init__.py  (+2 more)
tests/: test_config.py  test_dotenv.py  test_fingerprinting.py  test_normalizer.py  test_openai_compatible.py  test_prompt_suite.py  test_reference_anchor_calibration.py  test_verdict.py
(+5 files in other folders)
