[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-provider-audit"
version = "0.1.0"
description = "CLI framework for auditing LLM providers and detecting model substitution."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["llm", "audit", "provider-audit", "model-routing", "openai-compatible", "proxy-detection"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "httpx>=0.27.0",
  "PyYAML>=6.0.1",
]

[project.urls]
Homepage = "https://github.com/benbenlijie/llm-provider-audit"
Repository = "https://github.com/benbenlijie/llm-provider-audit"
Issues = "https://github.com/benbenlijie/llm-provider-audit/issues"
Releases = "https://github.com/benbenlijie/llm-provider-audit/releases"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
llm-provider-audit = "model_checker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/model_checker"]
